# hello-rasterization

./: CMakeLists.txt  README.md  hello_piramide.cpp  main.cpp
LearningOpengl/: shader_ex1.cpp  shader_ex2.cpp
LearningOpengl/shader_class/: shaders_class.cpp
LearningOpengl/textures/: filesystem.h
LearningOpengl/textures/intro/: textures.cpp
LearningOpengl/textures/textures_combined/: textures_combined.cpp
LearningOpengl/uniform/: shaders_uniform.cpp
hello_exercises/: exe2_two_tri_diff.cpp  exe3_two_shaders.cpp  two_tri.cpp  two_tri_sol.cpp
include/: glad.c
include/glad/: glad.h
shader/: 2.1.basic_lighting.vs  5.1.transform.fs  BoundingVolume.h  Objeto.cpp  Objeto.h  basic_lighting_diffuse.cpp  glut_ply.cpp  glut_ply.h  main.cpp  myheatmap.cpp  mynpiramidesilum.cpp  mytransformations.cpp  points.txt  transformations.cpp  transformations2.cpp
shadersLearning/: shader_ex3.cpp
shadersLearning/interpolation/: shaders_interpolation.cpp
shadersLearning/shader_class/: shaders_class.cpp
